test: 更新和新增测试用例
- 优化 SmartDocApplicationTests 应用测试
- 新增 ModelFactoryTest 模型工厂测试
- 新增 BatchSizeConfigTest 批量配置测试
- 优化 EmbeddingClientTest 嵌入客户端测试
- 优化 MarkdownParserTest Markdown 解析器测试
- 优化 MarkdownProcessTest Markdown 处理测试